<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Alitic</string>
    <string name="save">ENREG.</string>
    <string name="cancel">ANNULER</string>
    <string name="yes">OUI</string>
    <string name="no">NON</string>
    <string name="ok">OK</string>
    <string name="button_top_left">Ajouter un repas</string>
    <string name="button_top_right">Ajouter un ressenti</string>
    <string name="button_bottom_left">Chronologie</string>
    <string name="button_bottom_right">Analyse</string>
    <string name="Knewave_Regular">Knewave-Regular</string>
    <string name="save_meal_title_dialog">Sauvegarder un repas</string>
    <string name="save_meal_content_dialog">Voulez-vous sauvegarder le repas à cette heure-ci ?</string>
    <string name="save_meal_success_message_dialog">Repas sauvegardé avec succès</string>
    <string name="save_food_new">Aliment sauvegardé avec succès</string>
    <string name="save_food_update">Aliment mis à jour avec succès</string>
    <string name="Satisfy_Regular">Satisfy-Regular</string>
    <string name="save_event_title_dialog">Sauvegarder ressenti</string>
    <string name="save_event_content_dialog">Voulez-vous sauvegarder le ressenti à cette heure-ci ?</string>
    <string name="save_event_success_message_dialog">Ressenti sauvegardé avec succès</string>
    <string name="save_abort_message_dialog">Renseignez une date et une heure svp.</string>
    <string name="error_save_meal">Il n\'y a pas de repas à sauvegarder. Choisir des aliments dans la liste.</string>
    <string name="error_save_event">Il n\'y a pas de ressenti à sauvegarder. Choisir un ou plusieurs ressentis dans la
        liste.
    </string>
    <string name="error_cancel_meal">Etes-vous sûr de quitter la sélection d\'un repas ? Les données renseignées seront
        perdues.
    </string>
    <string name="error_cancel_event">Etes-vous sûr de quitter la sélection d\'un ressenti ? Les données renseignées
        seront perdues.
    </string>
    <string name="error_cancel_meal_title">Quitter</string>
    <string name="error_cancel_event_title">Quitter</string>
    <string name="menu_delete">Supprimer</string>
    <string name="menu_modify">Modifier paramètres</string>
    <string name="nom_de_l_aliment">Nom de l\'aliment:</string>
    <string name="food_delete_title">Suppression aliment</string>
    <string name="meal_delete_title">Suppression repas</string>
    <string name="event_type_delete_title">Suppression ressenti</string>
    <string name="meal_delete">Etes-vous sûr de supprimer ce repas ?</string>
    <string name="meal_deleted">Repas supprimé</string>
    <string name="food_delete">Etes-vous sûr de supprimer cet aliment ?</string>
    <string name="food_deleted">Aliment supprimé</string>
    <string name="event_type_delete">Etes-vous sûr de supprimer ce ressenti ?</string>
    <string name="event_type_deleted">Ressenti supprimé</string>
    <string name="add">Ajouter</string>
    <string name="panel_title">Mon repas</string>
    <string name="message_no_food">aucun aliment sélectionné</string>
    <string name="date">Date</string>
    <string name="time">Heure</string>
    <string name="select_time_date">Sélectionner une date et une heure.</string>
    <string name="not_enough_data">Pas de donnée disponible. Impossible d\'afficher le graphe.</string>
    <string name="title_toolbar_stat">Statistiques</string>
    <string name="menu_global_positive">Effets positifs</string>
    <string name="menu_global_negative">Effets négatifs</string>
    <string name="menu_detail">En détails</string>
    <string name="menu_info">Informations</string>
    <string name="menu_not_for_analysis">Ne plus prendre en compte</string>
    <string name="menu_not_for_analysis_title">Ignorer aliment</string>
    <string name="menu_not_for_analysis_content1">Etes-vous sûr de vouloir ignorer cet aliment (</string>
    <string name="menu_not_for_analysis_content2">)de l\'analyse ?</string>
    <string name="menu_not_for_analysis_confirm">Cet aliment n\'est plus pris en compte.</string>
    <string name="evolution">Evolution</string>
    <string name="chronology">Chronologie</string>
    <string name="legend_chrono_less">Moins</string>
    <string name="legend_chrono_plus">Plus</string>
    <string name="detail_per_food_title">Detail par aliment</string>
    <string name="all_event_types">Tous types</string>
    <string name="first_day_week">Lun.</string>
    <string name="last_day_week">Dim.</string>
    <string name="title_foods_list_positive">Aliments causant le moins de ressenti</string>
    <string name="title_piechart_positive">Répartition des types d\'aliments causant le moins de ressenti</string>
    <string name="title_foods_list_negative">Aliments causant le plus de ressentis</string>
    <string name="title_piechart_negative">Répartition des types d\'aliments causant le plus de ressentis</string>
    <string name="name_addeventtype">Entrer un type de ressenti</string>
    <string name="time_occurrence_add_eventtype">Temps d\'apparition du ressenti après repas</string>
    <string name="name_addfood">Entrer un nom</string>
    <string name="addfood">Ajouter un aliment</string>
    <string name="addeventtype">Ajouter un ressenti</string>
    <string name="modifyfood">Modifier un aliment</string>
    <string name="modifyeventtype">Modifier un ressenti</string>
    <string name="foodtype_addfood">Type d\'aliment:</string>
    <string name="take_into_account_addfood">Prendre en compte pour l\'analyse ?</string>
    <string name="take_last_meal_add_eventtype">Prendre dernier repas avant apparition</string>
    <string name="select_period_add_eventtype">Sélectionner période d\'apparition après un repas</string>
    <string name="select_period_add_eventtype1">Ressenti apparaissant entre</string>
    <string name="select_period_add_eventtype2">h et</string>
    <string name="select_period_add_eventtype3">h après un repas.</string>
    <string name="error_event_type_name_too_long">Le nom du ressenti est trop long (>= 20 char).</string>
    <string name="save_add_eventtype">Ressenti sauvegardé avec succès</string>
    <string name="save_update_eventtype">Ressenti mis à jour avec succès</string>
    <string name="error_food_already_in_db">Aliment déjà présent dans le catalogue. Choisir un autre nom.</string>
    <string name="error_food_without_name">Donner un nom à l\'aliment.</string>
    <string name="error_food_without_foodtype">Choisir un type d\'aliment dans la liste.</string>
    <string name="error_food_name_too_long">Le nom de l\'aliment est trop long (>= 20 char).</string>
    <string name="error_event_already_in_db">Ressenti déjà présent dans le catalogue. Choisir un autre nom.</string>
    <string name="error_event_without_name">Donner un nom au ressenti.</string>
    <string name="error_event_with_wrong_range">La période sélectionnée (0h, 0h) n\' a pas de sens. Sélectionner un
        période plus large.
    </string>
    <string name="title_settings">Paramètres</string>
    <string name="name_user">Mon Prénom:</string>
    <string name="export_data_excel">Exporter les données sous Excel:</string>
    <string name="permission_write">Donner permission pour sauvegarder fichier excel dans Downloads.</string>
    <string name="permission_denied">Sans permission, les données ne peuvent pas être exportées sous excel.</string>
    <string name="replace_excel_file_title">Exporter données sous Excel</string>
    <string name="replace_excel_file_message" tools:ignore="Typos">Un fichier excel avec le même nom existe déjà.
        Remplacer le fichier existant ?
    </string>
    <string name="excel_file_name">Données_Alitic.xls</string>
    <string name="settings_foods_text">Paramètres des aliments</string>
    <string name="settings_events_text">Paramètres des ressentis</string>
    <string name="no_foodtype_found">Pas de type d\'aliment trouvé. Impossible d\'afficher les paramètres</string>
    <string name="no_eventtype_found">Pas de type de ressenti trouvé. Impossible d\'afficher les paramètres</string>
    <string name="food_settings_header_col_start">Aliment</string>
    <string name="food_settings_header_col_end">Pris en compte?</string>
    <string name="event_settings_header_col_start">Ressenti</string>
    <string name="event_settings_header_col_end">Modalités de prise en compte</string>
    <string name="settings_saved">Paramètres enregistrés</string>
    <string name="quit">Quitter</string>
    <string name="for_last_meal">Lié au dernier repas</string>
    <string name="undefined">Indéfini</string>
    <string name="occur_between">Apparaît entre</string>
    <string name="and">et</string>
    <string name="hrs_after_meal">hrs après un repas</string>
    <string name="col_date_meal">Date Repas</string>
    <string name="col_date_meal_long">Date Repas (en ms)</string>
    <string name="col_foodtype">Type d\'aliment</string>
    <string name="col_foods">Aliments</string>
    <string name="col_food_taken_into_acc">Aliment pris en compte pour l\'analyse?</string>
    <string name="col_date_event">Date Ressenti</string>
    <string name="col_date_event_long">Date Ressenti (en ms)</string>
    <string name="col_event_type_name">Nom ressenti</string>
    <string name="reset_data">Reset des données</string>
    <string name="reset">RAZ</string>
    <string name="title_legend">LEGENDE</string>
    <string name="text_meal_and_event">Au moins un repas et un ressenti ce jour-là</string>
    <string name="text_meal_only">Au moins un repas ce jour-là. Pas de ressenti enregistré.</string>
    <string name="text_event_only">Au moins un ressenti ce jour-là. Pas de repas enregistré.</string>
    <string name="click_allowance">INFO : vous pouvez cliquer sur un point de couleur pour avoir accès à plus de détails
        sur la chronologie.
    </string>
    <string name="title_panel1_info">Informations 1er onglet</string>
    <string name="content_1st_panel_1" tools:ignore="Typos">Le premier onglet montre les statistiques liées aux aliments
        causant le plus de ressentis: \n \n
        - Aliments les plus \"perturbants\". La photo et le nom de l\'aliment sont indiqués. La portion de cercle en rouge
        autour de la photo correspond à la proportion de repas (contenant l\'aliment en question) qui sont à l\'origine d\'un
        ressenti. Par exemple:
    </string>
    <string name="content_1st_panel_2">100% des repas contenant du pain ont causé au moins un ressenti par la suite.
    </string>
    <string name="content_1st_panel_3">50% des repas contenant du pain ont causé au moins un ressenti par la suite.
    </string>
    <string name="content_1st_panel_4" tools:ignore="Typos">- Répartition des aliments les plus \"perturbants\". Par
        exemple, un taux de 50% pour la viande signifie que, parmi tous les aliments à l\'origine d\'au moins un
        ressenti, la moitié d\'entre eux sont de la viande.
    </string>
    <string name="title_panel2_info">Remarques</string>
    <string name="content_2nd_panel_1">Ces deux graphiques permetent au bout de quelques mois d\'étude de dégager des
        tendances sur les aliments ou types d\'aliment causant le plus de ressentis. \n \n Il s\'agit bien de tendances
        car de nombreux autres paramètres ont un impact sur les résultats (quantité des
        aliments, leur qualité, le stress, intolérances,… D\'autre part, les résultats sont valables
        pour tous les types de ressenti rencontrés.
    </string>
    <string name="subtitle_panel2">
        <u>
            <b>Activer/désactiver un aliment</b>
        </u>
    </string>
    <string name="content_2nd_panel_2">Si un aliment ne doit plus être pris en compte dans les statistiques, il est
        possible de le désactiver en suivant
        la procédure suivante:\n
        - Faire un appui long sur l\'aliment.\n
        - Dans le menu qui s\'ouvre, sélectionner \"ne plus prendre en compte\"\n
        - Cliquer sur OK.
    </string>
</resources>