<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_global_negative"
            android:title="@string/menu_global_negative"
            android:orderInCategory="1"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_global_positive"
            android:title="@string/menu_global_positive"
            android:orderInCategory="2"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_detail"
            android:title="@string/menu_detail"
            android:orderInCategory="3"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_info"
            android:title="@string/menu_info"
            android:orderInCategory="4"
            app:showAsAction="ifRoom"/>

</menu>