<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

    <!-- TITLE LEGEND -->
    <TextView
            android:id="@+id/title_legend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            android:text="@string/title_legend"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:lines="1"/>



        <TextView
                android:id="@+id/text_meal_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_below="@+id/title_legend"
                android:layout_margin="10dp"
                android:textSize="16sp"
                android:text="@string/text_meal_and_event"
                android:drawableStart="@drawable/background_event_and_meal"
                android:drawablePadding="10dp"
                android:lines="2"
                android:layout_marginStart="10dp"/>

        <TextView
                android:id="@+id/text_meal_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_below="@+id/text_meal_event"
                android:layout_margin="10dp"
                android:textSize="16sp"
                android:text="@string/text_meal_only"
                android:drawableStart="@drawable/background_meal_only"
                android:drawablePadding="10dp"
                android:lines="2"
                android:layout_marginStart="10dp"/>

        <TextView
                android:id="@+id/text_event_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_below="@+id/text_meal_only"
                android:layout_margin="10dp"
                android:text="@string/text_event_only"
                android:drawableStart="@drawable/background_event_only"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:lines="2"
                android:layout_marginStart="10dp"/>


    <TextView
            android:id="@+id/text_click_allowance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            android:text="@string/click_allowance"
            android:layout_below="@+id/text_event_only"
            android:layout_margin="10dp"/>

    <!-- BUTTON OK -->
    <Button
            android:id="@+id/button_ok"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="30dp"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_below="@+id/text_click_allowance"
            style="?android:attr/borderlessButtonStyle"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>