<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:rsb="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:minWidth="250dp"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="1dp"
            android:outlineProvider="none"
            android:background="@android:color/white">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addeventtype"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

            <!--NAME EVENT TYPE -->
            <EditText
                    android:id="@+id/field_name_eventtype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/name_addeventtype"
                    android:inputType="text"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/time_occurrence_add_eventtype"/>

            <!-- TAKE LAST MEAL ? -->
            <RadioGroup
                    android:id="@+id/group_radio_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">
                <RadioButton android:id="@+id/take_last_meal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/take_last_meal_add_eventtype"/>
                <RadioButton android:id="@+id/select_period"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/select_period_add_eventtype"/>
            </RadioGroup>

        </LinearLayout>

    <!-- PERIOD EVENT_TYPE OCCURRENCE AFTER MEAL -->
    <FrameLayout
            android:id="@+id/layout_range_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.ianpinto.androidrangeseekbar.rangeseekbar.RangeSeekBar
                android:id="@+id/range_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                rsb:valuesAboveThumbs="false"
                rsb:absoluteMinValue="0"
                rsb:absoluteMaxValue="24"/>

    </FrameLayout>

    <!-- BUTTON SAVE -->
    <Button
            android:id="@+id/button_save_eventtype"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="15dp"
            android:text="@string/save"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorAccent"
            android:background="@android:color/white"/>

</LinearLayout>