<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textSize="25sp"
        android:gravity="center_horizontal"/>

    <!--NAME USER -->
    <LinearLayout
            android:id="@+id/layout_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/title_settings">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/name_user"/>

        <EditText
                android:id="@+id/name_user"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>

    </LinearLayout>

    <!-- EXPORT DATA AS EXCEL SHEET -->
    <LinearLayout
            android:id="@+id/layout_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/layout_user_name">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/export_data_excel"/>

        <ImageButton
                android:id="@+id/button_export"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/excel"/>

    </LinearLayout>

    <!-- RESET DATA -->
    <LinearLayout
            android:id="@+id/layout_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/layout_export">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/reset_data"/>

        <Button
                android:id="@+id/button_reset"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_marginStart="10dp"/>

    </LinearLayout>

    <!-- BUTTON SAVE -->
    <Button
            android:id="@+id/button_save"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_below="@+id/layout_reset"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_alignParentEnd="true"
            android:text="@string/save"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorAccent"
            android:background="@android:color/white"/>

</RelativeLayout>